# SDIZO2

./: CMakeLists.txt  Graphs.cpp  Graphs.h  List.cpp  List.h  Matrix.cpp  Matrix.h  Menu.cpp  Menu.h  SDIZO2.cpp  Testing.cpp  Testing.h  Tests.cpp  Tests.h  main.cpp
